tests/paczka1/fuzzy1/70852244.err
Error in line 14: f9ta S998 -3,4
Error in line 13: 3jt S998 47,4
Error in line 15: 3jt A986 98,6
Error in line 21: f9ta A948 37,4
Error in line 26: 77BH S998 76,4
Error in line 18: 3jt S998 25,0
Error in line 29: f9ta S479 94,3
Error in line 38: CeJ A986 51,4
